--- a/dissertation.tex
+++ b/dissertation.tex
@@ -78,11 +78,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Chapter 1
-\chapter{Introduction}
+\chapter{Chapter 1}
 \input{chapter1.tex}
 
 % Chapter 2
-\chapter{Background}
+\chapter{Chapter 2}
 \input{chapter2.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -90,9 +90,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Bibliography
-%\inputencoding{latin2}
 \bibliography{dissertation}
-%\inputencoding{utf8}
 \addtocontents{toc}{\protect\vspace*{\baselineskip}}
 
 % Add bibliography to contents page
