Restored page numbers following title page.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -77,17 +77,23 @@
 %MAIN CHAPTERS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\pagestyle{plain} % Restore page numbers
+
 % Chapter 1
 \chapter{Chapter 1}
+\thispagestyle{empty} % No page number for first page of chapter
 \input{chapter1.tex}
 
 % Chapter 2
 \chapter{Chapter 2}
+\thispagestyle{empty} % No page number for first page of chapter
 \input{chapter2.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% BIBLIOGRAPHY AND OTHER LISTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\backmatter
 
 % Bibliography
 \bibliography{dissertation}
