Reduced spacing between paragraph end and next section heading.
In response to the following comment by the graduate school: "There
appears to be more than one double spaced line between the end of your
paragraphs and the beginning of the next section heading. There should
be only one double spaced line between these. Please refer to the sample
pages 12 to 21 for an example of how the spacing between the title and
paragraphs should appear, sample pages link,
http://gradschool.unc.edu/academics/thesis-
diss/guide/pdf/samplepages2013.pdf". Modification provided by Ryo Moore.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -18,6 +18,14 @@
 \usepackage{amssymb}
 \usepackage{geometry}
 
+%% Reduce spacing between paragraph and section title %%%%%%%
+%% @todo: Put this modification in the class file itself.
+\usepackage{titlesec}
+\titlespacing*{\section}
+{0pt}{-5pt}{0pt}
+\titlespacing*{\subsection}
+{0pt}{-5pt}{0pt}
+
 %% Normal LaTeX or pdfLaTeX? %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{ifpdf}
 
@@ -53,11 +61,12 @@
 	\DeclareGraphicsExtensions{.eps}
 \fi
 
-\pagestyle{empty} %No headings for the first pages.
+\pagestyle{empty} %No headings or page numbers for the first pages unless otherwise specified
 
 %%%%%%%%%%%%%%%%%
 %% INITIAL THINGS
 %%%%%%%%%%%%%%%%%
+
 \frontmatter
 
 \maketitle
