Added list of acronyms.

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -2,3 +2,5 @@
 \subsection{Subsection}
 \subsubsection{Subsubsection}
 Citation \cite{bibkey1}
+
+Here we define \gls{unc} for the first time. If we use it again, it'll just come out as \gls{unc}.
