--- a/dissertation.tex
+++ b/dissertation.tex
@@ -30,6 +30,9 @@
 \titlespacing*{\subsection}
 {0pt}{-5pt}{0pt}
 
+%% Flush footnotes to the left
+\usepackage[hang,flushmargin]{footmisc}
+
 %% Normal LaTeX or pdfLaTeX? %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{ifpdf}
 
