Sets footnote separation to zero

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -32,6 +32,8 @@
 
 %% Flush footnotes to the left
 \usepackage[hang,flushmargin]{footmisc}
+%% Places footnotes immediately below horizontal rule
+\setlength{\footnotesep}{0pt}
 
 %% Normal LaTeX or pdfLaTeX? %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{ifpdf}
