--- a/dissertation.tex
+++ b/dissertation.tex
@@ -29,6 +29,7 @@
 {0pt}{-5pt}{0pt}
 \titlespacing*{\subsection}
 {0pt}{-5pt}{0pt}
+\usepackage{indentfirst}   %Indents first paragraphs in every section.
 
 %% Flush footnotes to the left
 \usepackage[hang,flushmargin]{footmisc}
