Restored page numbers starting at the copyright page.
In response to the following from the graduate school: "Beginning with
the copyright page you will need to add page numbers. The Copyright page
will be page number ii." Fix provided by Wenhua Guan.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -82,7 +82,7 @@
 	\DeclareGraphicsExtensions{.eps}
 \fi
 
-\pagestyle{empty} %No headings or page numbers for the first pages unless otherwise specified
+\pagestyle{plain}
 
 %%%%%%%%%%%%%%%%%
 %% INITIAL THINGS
