Removed line breaks in abstract.
In response to "Abstract page: All paragraphs must be indented.
Reference link, http://gradschool.unc.edu/academics/thesis-
diss/guide/ordercomponents.html#abstract"

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 \abstract{
-Abstract paragraph 1.
-\\
-Abstract paragraph 2.
+Abstract paragraph 1. It has some words. Really, a lot of words. Some of the best words. Like Lorem, and Ipsum.
+
+Abstract paragraph 2. Note that line breaks aren't allowed, only indents.
 }
