Noted acknowledgements indenting rule.
In response to "Acknowledgements page: All paragraphs on this page
should be indented. Reference link, http://gradschool.unc.edu/academics
/thesis-diss/guide/ordercomponents.html#dedication"

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,1 +1,1 @@
-Acknowledgements
+Acknowledgements. As with the abstract, note that hard line breaks aren't allowed. New paragraphs can be indented only.
