Moved list of abbreviations to front matter.
In response to: "Table of Contents page: There should be an entry after
the List of Tables entry for LIST OF ABBREVIATIONS, that is where that
page should be, the last component of the dissertation is the
REFERENCES. Reference link, http://gradschool.unc.edu/academics/thesis-
diss/guide/ordercomponents.html#contents"

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -101,6 +101,8 @@
 
 \listoftables
 
+\printglossary[type=\acronymtype,title=List of Abbreviations]
+
 \mainmatter
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,9 +131,6 @@
 
 % Add bibliography to contents page
 \addcontentsline{toc}{chapter}{Bibliography} %'Bibliography' into toc
-
-% Glossaries and abbreviations
-\printglossary[type=\acronymtype,title=Abbreviations]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% APPENDICES
