--- a/dissertation.tex
+++ b/dissertation.tex
@@ -101,7 +101,7 @@
 
 \listoftables
 
-\printglossary[type=\acronymtype,title=List of Abbreviations]
+\printglossary[type=\acronymtype,title=LIST OF ABBREVIATIONS]
 
 \mainmatter
 
