Extra 'bibliography' entry is not necessary.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -130,7 +130,7 @@
 \addtocontents{toc}{\protect\vspace*{\baselineskip}}
 
 % Add bibliography to contents page
-\addcontentsline{toc}{chapter}{Bibliography} %'Bibliography' into toc
+%\addcontentsline{toc}{chapter}{Bibliography} %'Bibliography' into toc
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% APPENDICES
