Correct top margin for list of abbreviations.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -101,7 +101,9 @@
 
 \listoftables
 
+\backmatter % Hack to get the top margin of this list correct
 \printglossary[type=\acronymtype,title=LIST OF ABBREVIATIONS]
+\frontmatter
 
 \mainmatter
 
