Added list of abbreviations to class.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -97,13 +97,11 @@
 
 \tableofcontents 
 
-\listoffigures
+\listoffigures 
 
 \listoftables
 
-\backmatter % Hack to get the top margin of this list correct
-\printglossary[type=\acronymtype,title=LIST OF ABBREVIATIONS]
-\frontmatter
+\listofabbreviations
 
 \mainmatter
 
