Set multiple line entries in lists to be single spaced.
In response to "List of Figures and Tables pages: If an entry takes up
more than one line, the lines should be single-spaced within the entry.
Reference link, http://gradschool.unc.edu/academics/thesis-
diss/guide/ordercomponents.html#tables"

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -95,11 +95,32 @@
 \chapter*{Acknowledgements}
 \input{acknowledgements.tex}
 
-\tableofcontents 
+% The graduate school requires that entries are double spaced.
+% They also require that multiple lines in a single entry are single spaced.
+% This achieves that by setting \baselineskip (the space between lines)
+% and \parskip (the additional space between paragraphs) directly, then restoring them
+%
+% @todo: Find a more elegant way of achieving this
 
-\listoffigures 
+% Establish original spacings
+\newlength{\oldbaselineskip}
+\setlength{\oldbaselineskip}{\the\baselineskip}
+\newlength{\oldparskip}
+\setlength{\oldparskip}{\the\parskip}
+
+% Set spacings for these sections
+\setlength{\baselineskip}{0.5\oldbaselineskip}
+\setlength{\parskip}{0.5\oldbaselineskip}
+
+\tableofcontents
+
+\listoffigures
 
 \listoftables
+
+% Restore original spacings
+\setlength{\baselineskip}{1.0\oldbaselineskip}
+\setlength{\parskip}{1.0\oldparskip}
 
 \listofabbreviations
 
